<resources>


    <!-- login -->

    <string name="btn_iniciar_pantalla">Iniciar Sesion</string>
    <string name="btn_registrar_pantalla">Registrarse</string>
    <string name="btn_cerrar_Sesion">Cerrar Sesion</string>

    <string name="txt_contraseña">Escribe aqui una contraseña</string>
    <string name="txt_correo">Escribe aqui un correo</string>
    <string name="txt_contraseña_repeat">Repita contraseña/string</string>

    <!-- Botones Menu -->

    <string name="icm_navarra_btn">ICM NAVARRA</string>
    <string name="lema_btn">Lema</string>
    <string name="pastor_btn">Video Pastor</string>
    <string name="pastora_btn">Video Pastora</string>
    <string name="escuelas_btn">Escuelas ICM Navarra</string>
    <string name="ministros_btn">Ministros</string>
    <string name="videos_btn">Videos</string>
    <string name="Predicas_btn">Predicas</string>

    <!-- descripcionnes targetas -->
    <string name="app_name">ICM Navarra</string>
    <string name="descripcion_icm_navarra">Bienvenidos a Icm Navarra</string>

    <string name="escuelas">Escuela ICM</string>

    <string name="tv_discipulado">Discipulado</string>
    <string name="discipulado_btn">Discipulado</string>

    <string name="tv_alabanza_icm">Alabanzas ICM</string>
    <string name="alabanzas_btn">Alabanzas</string>

    <string name="tv_diario">Diario de intimidad</string>
    <string name="diario_intimidad_btn">Diario intimidad</string>

    <string name="tv_predicas">Predicas en audio</string>
    <string name="btn_predicas">Predicas</string>

    <!-- cambio de activity -->
    <string name="btn_siguente">Siguente</string>
    <string name="btn_anterior">Anterior</string>

    <!-- menu de opsiones -->

    <string name="item1">Discipulado</string>
    <string name="item2">Alabanzas</string>
    <string name="item3">Diario</string>
    <string name="item4">Predicas en audio</string>

    <string name="Buscar">Buscar</string>
    <string name="Compartir">Compartir</string>
    <string name="correo">correo</string>


</resources>