<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    tools:context="apps.icm.iglesianavarra.RegistrarseActivity">

    <LinearLayout
        android:layout_width="337dp"
        android:layout_height="668dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/correo"
            app:endIconMode="clear_text"
            app:helperText="@string/txt_correo"
            android:inputType="textPersonName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:onClick="@string/txt_correo" />

        <EditText
            android:id="@+id/contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Contraseña"
            android:inputType="textPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:onClick="@string/txt_contraseña" />

        <EditText
            android:id="@+id/contraseñaConfirmacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Contraseña"
            android:inputType="textPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:onClick="@string/txt_contraseña_repeat" />

        <Button
            android:id="@+id/btn_registrarse_sesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#BD1D1D" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>