<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dorado"
    tools:context="apps.icm.iglesianavarra.IniciarSesionActivity">

    <LinearLayout
        android:layout_width="361dp"
        android:layout_height="676dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Correo"
            android:inputType="textPersonName"
            android:onClick="@string/txt_correo"
            android:visibility="visible" />

        <EditText
            android:id="@+id/contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Cotraseña"
            android:inputType="textPassword"
            android:onClick="@string/txt_contraseña"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_iniciar_sesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#BD1D1D"
            android:onClick=""
            android:text="@string/btn_iniciar_pantalla"
            android:visibility="visible" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>