<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context="apps.icm.iglesianavarra.SegundaActivity2">


    <LinearLayout
        android:layout_width="427dp"
        android:layout_height="755dp"
        android:layout_margin="24dp"
        android:background="@drawable/bg_color"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538">

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="702dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="735dp"
                    android:gravity="center"
                    android:visibility="visible">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <androidx.cardview.widget.CardView
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            app:cardBackgroundColor="#D7101B1C"
                            app:cardCornerRadius="20dp"
                            app:cardElevation="16dp"
                            app:cardPreventCornerOverlap="true"
                            app:cardUseCompatPadding="true">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textViewDiscipulado"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="8dp"
                                    android:fontFamily="@font/galada"
                                    android:text="@string/tv_discipulado"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                    android:textColor="#FFFFFF"
                                    android:textStyle="bold" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:orientation="horizontal">

                                    <ImageView
                                        android:id="@+id/imageView7"
                                        android:layout_width="70dp"
                                        android:layout_height="70dp"
                                        android:layout_margin="8dp"
                                        app:srcCompat="@drawable/logoverde"
                                        tools:srcCompat="@drawable/logoverde" />

                                    <Button
                                        android:id="@+id/discipulado_btn"
                                        style="?attr/materialButtonOutlinedStyle"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="8dp"
                                        android:backgroundTint="#770E0E07"
                                        android:onClick="irDiscipulado"
                                        android:text="@string/tv_discipulado"
                                        android:textColor="@color/white"
                                        app:cornerRadius="20dp"
                                        app:strokeColor="@color/browser_actions_bg_grey" />
                                </LinearLayout>

                            </LinearLayout>


                        </androidx.cardview.widget.CardView>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:cardBackgroundColor="#D7101B1C"
                            app:cardCornerRadius="20dp"
                            app:cardElevation="16dp"
                            app:cardPreventCornerOverlap="true"
                            app:cardUseCompatPadding="true">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView7"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="8dp"
                                    android:text="@string/tv_alabanza_icm"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                    android:textColor="#FFFFFF"
                                    android:textStyle="bold" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:orientation="horizontal">

                                    <ImageView
                                        android:id="@+id/imageView8"
                                        android:layout_width="55dp"
                                        android:layout_height="70dp"
                                        android:layout_margin="8dp"
                                        app:srcCompat="@drawable/albanza" />

                                    <Button
                                        android:id="@+id/Alavanzas_btn"
                                        style="?attr/materialButtonOutlinedStyle"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="8dp"
                                        android:backgroundTint="#770E0E07"
                                        android:onClick="irAlavanzas"
                                        android:text="@string/alabanzas_btn"
                                        android:textColor="@color/white"
                                        app:cornerRadius="20dp"
                                        app:strokeColor="@color/browser_actions_bg_grey" />
                                </LinearLayout>

                            </LinearLayout>


                        </androidx.cardview.widget.CardView>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:cardBackgroundColor="#D7101B1C"
                            app:cardCornerRadius="20dp"
                            app:cardElevation="16dp"
                            app:cardPreventCornerOverlap="true"
                            app:cardUseCompatPadding="true">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textViewDiario"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="8dp"
                                    android:text="@string/tv_diario"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                    android:textColor="#FFFFFF"
                                    android:textStyle="bold" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:orientation="horizontal">

                                    <ImageView
                                        android:id="@+id/imageView9"
                                        android:layout_width="70dp"
                                        android:layout_height="70dp"
                                        android:layout_margin="8dp"
                                        app:srcCompat="@drawable/diario" />

                                    <Button
                                        android:id="@+id/Diario_btn"
                                        style="?attr/materialButtonOutlinedStyle"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="8dp"
                                        android:backgroundTint="#770E0E07"
                                        android:onClick="irDiario"
                                        android:text="@string/diario_intimidad_btn"
                                        android:textColor="@color/white"
                                        app:cornerRadius="20dp"
                                        app:strokeColor="@color/browser_actions_bg_grey" />
                                </LinearLayout>

                            </LinearLayout>


                        </androidx.cardview.widget.CardView>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="225dp"
                        android:gravity="center">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="178dp"
                            app:cardBackgroundColor="#D7101B1C"
                            app:cardCornerRadius="20dp"
                            app:cardElevation="16dp"
                            app:cardPreventCornerOverlap="true"
                            app:cardUseCompatPadding="true">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView9"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="8dp"
                                    android:text="@string/tv_predicas"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                    android:textColor="#FFFFFF"
                                    android:textStyle="bold" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:orientation="horizontal">

                                    <ImageView
                                        android:id="@+id/imageView10"
                                        android:layout_width="70dp"
                                        android:layout_height="70dp"
                                        android:layout_margin="8dp"
                                        app:srcCompat="@drawable/tv_audio"
                                        tools:srcCompat="@drawable/tv_audio" />

                                    <Button
                                        android:id="@+id/Audio_btn"
                                        style="?attr/materialButtonOutlinedStyle"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="8dp"
                                        android:backgroundTint="#770E0E07"
                                        android:onClick="irPredicas"
                                        android:text="@string/tv_predicas"
                                        android:textColor="@color/white"
                                        app:cornerRadius="20dp"
                                        app:strokeColor="@color/browser_actions_bg_grey" />

                                </LinearLayout>


                            </LinearLayout>


                        </androidx.cardview.widget.CardView>

                    </TableRow>


                </TableLayout>

                <Button
                    android:id="@+id/btn_Anterior"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="#97020201"
                    android:onClick="IrAPrimeraPantalla"
                    android:text="@string/btn_anterior"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:cornerRadius="20dp"
                    app:iconPadding="4dp"
                    app:strokeColor="@color/browser_actions_bg_grey" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="60dp" />
            </LinearLayout>

        </ScrollView>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>